Fix typo in header text from 'rom' to 'From'

--- a/slay-your-shift.html
+++ b/slay-your-shift.html
@@ -168,7 +168,7 @@
     </div>
 
     <header class="hero container">
-        <h1>Slay Your Shift<br>rom Bedside to Business</h1>
+        <h1>Slay Your Shift<br>From Bedside to Business</h1>
         <p class="subtitle">The 5-day experience</p>
         <span class="date-badge">Feb 23-27, 2026</span>
     </header>
