--- a/slay-your-shift.html
+++ b/slay-your-shift.html
@@ -172,7 +172,7 @@
     </div>
 
     <header class="hero container">
-        <h1>From Bedside to Business:<br>Slay Your Shift</h1>
+        <h1>Slay Your Shift:<br>From Bedside to Business</h1>
         <p style="font-style: italic; color: var(--gold); font-size: 1.5rem; margin-top: 15px;">The 5-day experience</p>
         <span style="color: var(--gold); text-transform: uppercase; letter-spacing: 3px; font-weight: bold; display: block; margin-top: 20px;">Feb 23-27, 2026</span>
     </header>
@@ -243,12 +243,12 @@
 
         <div class="faq-item">
             <span class="faq-question">How much time do I need to commit?</span>
-            <p>This is an execution sprint. We meet live for 60-90 minutes each day to ensure you are doing the work, not just watching it.</p>
+            <p>This is an execution shift. We meet live for 60 minutes each day to ensure you are doing the work, not just watching it.</p>
         </div>
 
         <h2 class="section-title" style="margin-top: 6rem;">What's Included</h2>
         <ul class="included-list">
-            <li>5 Daily Execution Sprints <span class="value">Value $497</span></li>
+            <li>5 Daily Live Sessions <span class="value">Value $497</span></li>
             <li>Business Mastery Workbook <span class="value">Value $97</span></li>
             <li>Private Community Access <span class="value">Value $197</span></li>
             <li>Build Your Signature Digital Asset<span class="value">Value $697</span></li>
@@ -258,7 +258,7 @@
         <div class="offer-box">
             <p class="price-label">Secure Your Spot For Only</p>
             <div class="price">$147</div>
-            <a href="#" class="btn">Join the Sprint</a>
+            <a href="#" class="btn">Join the Shift</a>
         </div>
     </section>
 
