Change label from 'first call' to 'first shift'

--- a/slay-your-shift.html
+++ b/slay-your-shift.html
@@ -293,7 +293,7 @@
                     <span class="timer-label">Seconds</span>
                 </div>
             </div>
-            <p style="font-size: 0.8rem; color: var(--gold); letter-spacing: 1px; text-transform: uppercase;">Until the first call</p>
+            <p style="font-size: 0.8rem; color: var(--gold); letter-spacing: 1px; text-transform: uppercase;">Until the first shift</p>
         </div>
     </div>
 
