Add favicon link to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TMac Inspired™ | You Can Have It All</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="tmac-logo.png">
     <meta name="description" content="TMac Inspired helps nurses pivot from bedside burnout into business ownership through luxury consulting and mindset mastery.">
     <style>
         /* --- RESET & VARIABLES --- */
