--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     </div>
 </section>
 
-<footer class="reveal">
+<footer class="reveal" style="text-align: center; padding: 4rem 0;">
     <div class="container">
         <p style="margin-bottom: 1rem; font-style: italic;">"You can have it all."</p>
         <div style="margin-bottom: 1rem;">TMac Inspired™ &copy; 2026</div>
