--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
 <footer class="reveal" style="text-align: center; padding: 4rem 0;">
     <div class="container">
         <p style="margin-bottom: 1rem; font-style: italic;">"You can have it all."</p>
+        </div>
         <div style="margin-bottom: 1rem;">TMac Inspired™ &copy; 2026</div>
         <div>
             <a href="privacy.html">Privacy Policy</a>
