--- a/index.html
+++ b/index.html
@@ -128,6 +128,40 @@ footer p {
     margin-left: auto;
     margin-right: auto;
 }
+/* --- NEW NAVIGATION STYLES --- */
+.main-nav {
+    background-color: var(--pine);
+    padding: 1.5rem 0;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+.nav-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-links {
+    display: flex;
+    gap: 2rem;
+    flex: 1;
+}
+.nav-links.right { justify-content: flex-end; }
+.nav-links a {
+    color: var(--bg);
+    text-transform: uppercase;
+    font-size: 0.75rem;
+    letter-spacing: 0.15em;
+    font-family: sans-serif; /* Clean contrast to the serif body */
+}
+.nav-links a:hover { color: var(--gold); }
+.logo-wrapper img { max-height: 60px; width: auto; }
+
+/* Mobile Nav adjustment */
+@media (max-width: 768px) {
+    .nav-links { display: none; } /* Consider a hamburger menu later */
+    .nav-flex { justify-content: center; }
+}
 
         /* --- ANIMATIONS --- */
         .reveal { opacity: 0; transform: translateY(30px); transition: opacity 0.8s ease-out, transform 0.8s ease-out; }
@@ -142,13 +176,22 @@ footer p {
 </head>
 <body>
 
-<div class="header-banner">
-    <img src="tmac-logo.png" alt="TMac Inspired Logo" class="logo">
-</div>
+<nav class="main-nav">
+    <div class="container nav-flex">
+        <div class="nav-links left">
+            <a href="/">Home</a>
+            <a href="#offerings">Offerings</a>
+        </div>
+        <div class="logo-wrapper">
+            <a href="/"><img src="tmac-logo.png" alt="TMac Inspired Logo" class="logo"></a>
+        </div>
+        <div class="nav-links right">
+            <a href="https://tmacmastermind.com/tee-room">Blog</a>
+            <a href="mailto:support@tmacinspired.com">Contact</a>
+        </div>
+    </div>
+</nav>
 
-<header class="hero container reveal">
-    <h1 class="hero-statement">You can have it all.<br>TMac Inspired™ shows you how.</h1>
-</header>
 
 <main class="container">
     <div class="offering-grid">
@@ -165,7 +208,18 @@ footer p {
                 <a href="nurse_pivot_embed.html" class="btn">Take the Assessment</a>
             </div>
         </section>
-
+<!-- MOVED UP TWO ROWS: TEE ELITE -->
+        <section class="offering-row reveal">
+            <div class="image-wrapper">
+                <img src="golfing.png" alt="TMac on the golf course" loading="lazy">
+            </div>
+            <div class="content-wrapper">
+                <h3>The Membership</h3>
+                <h2>The Tee Elite Circle</h2>
+                <p>Not a league. A lifestyle. Among women who've already built. Now, you play.</p>
+                <a href="https://tmacmastermind.com" class="btn btn-gold">Explore the Circle</a>
+            </div>
+        </section>
         <!-- SECOND ROW: SLAY YOUR SHIFT -->
         <section class="offering-row reveal">
             <div class="image-wrapper horizontal">
@@ -192,18 +246,7 @@ footer p {
             </div>
         </section>
 
-        <!-- FOURTH ROW: TEE ELITE -->
-        <section class="offering-row reveal">
-            <div class="image-wrapper">
-                <img src="golfing.png" alt="TMac on the golf course" loading="lazy">
-            </div>
-            <div class="content-wrapper">
-                <h3>The Membership</h3>
-                <h2>The Tee Elite Circle</h2>
-                <p>Not a league. A lifestyle. Among women who've already built. Now, you play.</p>
-                <a href="https://tmacmastermind.com" class="btn btn-gold">Explore the Circle</a>
-            </div>
-        </section>
+        
     </div>
 </main>
 
