--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TMac Inspired™ | You Can Have It All</title>
-    <!-- Favicon -->
     <link rel="icon" type="image/png" href="tmac-logo.png">
     <meta name="description" content="TMac Inspired helps nurses pivot from bedside burnout into business ownership through luxury consulting and mindset mastery.">
     <style>
@@ -59,7 +58,7 @@
         .btn-gold { border-color: var(--gold); color: var(--gold); }
         .btn-gold:hover { background: var(--gold); color: white; }
 
-        /* --- HEADER & HERO --- */
+        /* --- HEADER & NAV --- */
         .header-banner {
             width: 100%;
             height: 120px;
@@ -70,9 +69,25 @@
         }
         .header-banner img.logo { max-height: 80px; width: auto; }
         
-        header.hero { text-align: center; padding: 3rem 1rem 2rem 1rem; }
+        /* New Nav Bar */
+        .main-nav {
+            text-align: center;
+            padding: 1.5rem 0;
+            border-bottom: 1px solid rgba(31, 66, 54, 0.05);
+            background: var(--bg);
+        }
+        .main-nav a {
+            margin: 0 20px;
+            text-transform: uppercase;
+            font-size: 0.8rem;
+            letter-spacing: 0.15em;
+            color: var(--text-main);
+            font-weight: 400;
+        }
+        .main-nav a.active-link { color: var(--gold); border-bottom: 1px solid var(--gold); }
+
+        header.hero { text-align: center; padding: 4rem 1rem 2rem 1rem; }
         .hero-statement { font-size: clamp(2rem, 4vw, 3rem); max-width: 800px; margin: 0 auto 1rem auto; }
-        .hero-sub { color: var(--gold); text-transform: uppercase; letter-spacing: 0.2em; font-size: 0.75rem; }
 
         /* --- LAYOUT --- */
         .container { max-width: var(--max-w); margin: 0 auto; padding: 0 2rem; }
@@ -86,82 +101,20 @@
         .image-wrapper.horizontal { aspect-ratio: 16/9; }
         .image-wrapper.book-mode { background-color: transparent; display: flex; justify-content: center; align-items: center; }
         .image-wrapper.book-mode img { object-fit: contain; transform: scale(1.3); }
-        .offering-row:hover .image-wrapper img { transform: scale(1.03); }
 
-        /* --- TEE ROOM --- */
-        .section-padding { padding: var(--spacing-section) 0; }
-        .tee-room-section { background-color: #fcfbf9; text-align: center; border-y: 1px solid rgba(31, 66, 54, 0.05); }
+        /* --- TEE ROOM (BLOG) SECTION --- */
+        .section-padding { padding: 5rem 0; }
+        .tee-room-section { background-color: #fcfbf9; text-align: center; border-top: 1px solid rgba(31, 66, 54, 0.05); border-bottom: 1px solid rgba(31, 66, 54, 0.05); margin: 4rem 0; }
 
-        /* --- UPDATED FOOTER --- */
-footer { 
-    padding: 6rem 0; 
-    text-align: center; 
-    font-size: 0.85rem; 
-    color: var(--text-light); 
-    border-top: 1px solid rgba(31, 66, 54, 0.1);
-    /* Flexbox ensures everything stays centered on wide PC screens */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-footer .container {
-    width: 100%;
-}
-
-footer a { 
-    margin: 0 15px; 
-    color: var(--pine); 
-    text-decoration: none;
-    transition: var(--transition);
-}
-
-footer a:hover { 
-    color: var(--gold); 
-}
-
-/* Ensures the quote looks elegant and centered on desktop */
-footer p {
-    margin-bottom: 20px;
-    max-width: 600px;
-    margin-left: auto;
-    margin-right: auto;
-}
-/* --- NEW NAVIGATION STYLES --- */
-.main-nav {
-    background-color: var(--pine);
-    padding: 1.5rem 0;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-}
-.nav-flex {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.nav-links {
-    display: flex;
-    gap: 2rem;
-    flex: 1;
-}
-.nav-links.right { justify-content: flex-end; }
-.nav-links a {
-    color: var(--bg);
-    text-transform: uppercase;
-    font-size: 0.75rem;
-    letter-spacing: 0.15em;
-    font-family: sans-serif; /* Clean contrast to the serif body */
-}
-.nav-links a:hover { color: var(--gold); }
-.logo-wrapper img { max-height: 60px; width: auto; }
-
-/* Mobile Nav adjustment */
-@media (max-width: 768px) {
-    .nav-links { display: none; } /* Consider a hamburger menu later */
-    .nav-flex { justify-content: center; }
-}
+        /* --- FOOTER --- */
+        footer { 
+            padding: 6rem 0; 
+            text-align: center; 
+            font-size: 0.85rem; 
+            color: var(--text-light); 
+            border-top: 1px solid rgba(31, 66, 54, 0.1);
+        }
+        footer a { margin: 0 15px; color: var(--pine); }
 
         /* --- ANIMATIONS --- */
         .reveal { opacity: 0; transform: translateY(30px); transition: opacity 0.8s ease-out, transform 0.8s ease-out; }
@@ -171,31 +124,28 @@ footer p {
             .offering-row { grid-template-columns: 1fr; gap: 2rem; text-align: center; }
             .offering-row:nth-child(even) .content-wrapper { order: 1; }
             .content-wrapper p { margin: 0 auto 2rem auto; }
+            .main-nav a { margin: 0 10px; font-size: 0.7rem; }
         }
     </style>
 </head>
 <body>
 
+<div class="header-banner">
+    <img src="tmac-logo.png" alt="TMac Inspired Logo" class="logo">
+</div>
+
 <nav class="main-nav">
-    <div class="container nav-flex">
-        <div class="nav-links left">
-            <a href="/">Home</a>
-            <a href="#offerings">Offerings</a>
-        </div>
-        <div class="logo-wrapper">
-            <a href="/"><img src="tmac-logo.png" alt="TMac Inspired Logo" class="logo"></a>
-        </div>
-        <div class="nav-links right">
-            <a href="https://tmacmastermind.com/tee-room">Blog</a>
-            <a href="mailto:support@tmacinspired.com">Contact</a>
-        </div>
-    </div>
+    <a href="index.html">Home</a>
+    <a href="https://tmacmastermind.com/tee-room" class="active-link">Blog</a>
+    <a href="mailto:support@tmacinspired.com">Contact</a>
 </nav>
 
+<header class="hero container reveal">
+    <h1 class="hero-statement">You can have it all.<br>TMac Inspired™ shows you how.</h1>
+</header>
 
 <main class="container">
     <div class="offering-grid">
-        <!-- FIRST ROW: NOW CONNECTED TO ASSESSMENT -->
         <section class="offering-row reveal">
             <div class="image-wrapper">
                 <img src="tmac-working.png" alt="TMac working elegantly at a desk" loading="lazy">
@@ -204,23 +154,19 @@ footer p {
                 <h3>The Entry Point</h3>
                 <h2>Nurse Pivot Plan Assessment</h2>
                 <p>Are you just tired, or are you ready for ownership? Take the free 2-minute assessment to discover your path out of burnout.</p>
-                <!-- POINTING TO THE EMBED FILE -->
                 <a href="nurse_pivot_embed.html" class="btn">Take the Assessment</a>
             </div>
         </section>
-<!-- MOVED UP TWO ROWS: TEE ELITE -->
-        <section class="offering-row reveal">
-            <div class="image-wrapper">
-                <img src="golfing.png" alt="TMac on the golf course" loading="lazy">
-            </div>
-            <div class="content-wrapper">
-                <h3>The Membership</h3>
-                <h2>The Tee Elite Circle</h2>
-                <p>Not a league. A lifestyle. Among women who've already built. Now, you play.</p>
-                <a href="https://tmacmastermind.com" class="btn btn-gold">Explore the Circle</a>
+
+        <section class="section-padding tee-room-section reveal">
+            <div class="container">
+                <h3>The Content</h3>
+                <h2 style="font-size: 1.8rem;">Daily permission for women who are ready to stop negotiating with the life they want.</h2>
+                <p style="margin: 0 auto 2rem auto;">Enter the Tee Elite Room where accomplished women get permission to play their own game.</p>
+                <a href="https://tmacmastermind.com/tee-room" class="btn">Read the Latest</a>
             </div>
         </section>
-        <!-- SECOND ROW: SLAY YOUR SHIFT -->
+
         <section class="offering-row reveal">
             <div class="image-wrapper horizontal">
                 <img src="from-bedside-to-business.png" alt="TMac speaking on stage" loading="lazy">
@@ -233,7 +179,6 @@ footer p {
             </div>
         </section>
 
-        <!-- THIRD ROW: BOOK -->
         <section class="offering-row reveal">
             <div class="image-wrapper book-mode">
                 <img src="Where_is_my_Life_Partner_Mockup.png" alt="Where Is My Life Partner Book">
@@ -246,23 +191,23 @@ footer p {
             </div>
         </section>
 
-        
+        <section class="offering-row reveal">
+            <div class="image-wrapper">
+                <img src="golfing.png" alt="TMac on the golf course" loading="lazy">
+            </div>
+            <div class="content-wrapper">
+                <h3>The Membership</h3>
+                <h2>The Tee Elite Circle</h2>
+                <p>Not a league. A lifestyle. Among women who've already built. Now, you play.</p>
+                <a href="https://tmacmastermind.com" class="btn btn-gold">Explore the Circle</a>
+            </div>
+        </section>
     </div>
 </main>
 
-<section class="section-padding tee-room-section reveal">
-    <div class="container">
-        <h3>The Content</h3>
-        <h2 style="font-size: 1.8rem;">Daily permission for women who are ready to stop negotiating with the life they want.</h2>
-        <p style="margin: 0 auto 2rem auto;">Enter the Tee Elite Room where accomplished women get permission to play their own game.</p>
-        <a href="https://tmacmastermind.com/tee-room" style="border-bottom: 1px solid var(--pine);">Read the Latest</a>
-    </div>
-</section>
-
-<footer class="reveal" style="text-align: center; padding: 4rem 0;">
+<footer class="reveal">
     <div class="container">
         <p style="margin-bottom: 1rem; font-style: italic;">"You can have it all."</p>
-        </div>
         <div style="margin-bottom: 1rem;">TMac Inspired™ &copy; 2026</div>
         <div>
             <a href="privacy.html">Privacy Policy</a>
@@ -288,4 +233,3 @@ footer p {
 </script>
 </body>
 </html>
-
