--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 <nav class="main-nav">
     <a href="index.html">Home</a>
-    <a href="https://tmacmastermind.com/tee-room" class="active-link">Blog</a>
+    <a href="https://tmacmastermind.com/tee-room.html" class="active-link">Blog</a>
     <a href="mailto:support@tmacinspired.com">Contact</a>
 </nav>
 
@@ -163,7 +163,7 @@
                 <h3>The Content</h3>
                 <h2 style="font-size: 1.8rem;">Daily permission for women who are ready to stop negotiating with the life they want.</h2>
                 <p style="margin: 0 auto 2rem auto;">Enter the Tee Elite Room where accomplished women get permission to play their own game.</p>
-                <a href="https://tmacmastermind.com/tee-room" class="btn">Read the Latest</a>
+                <a href="https://tmacmastermind.com/tee-room.html" class="btn">Read the Latest</a>
             </div>
         </section>
 
