--- a/slay-your-shift.html
+++ b/slay-your-shift.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A 5-day execution experience for nurses ready to swap burnout for business. Join TMac Inspired™ to build a profitable life you love.">
     <title>Slay Your Shift | TMac Inspired™</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="tmac-logo.png">
