--- a/nurse-pivot.html
+++ b/nurse-pivot.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Stop negotiating with the life you want. Take the Nurse Pivot Plan Assessment to discover how to turn your clinical expertise into a business you own and love.">
     <title>Nurse Pivot Plan | TMac Inspired™</title>
     <style>
         :root {
